se corrige ruta de imagen

--- a/maquetacion.html
+++ b/maquetacion.html
@@ -73,7 +73,7 @@
     </section>
     <footer >
         <div class="mensaje"> Todos los derechos reservados a FRONT END 1 </div>
-        <img class="git" src="./img/github.png" alt="github">
+        <a href="https://github.com/" target="_blank"> <img class="git" src="./img/superHero/github.png" alt="github"> </a>
     </footer>
 </body>
 
