se agrega estilos a batman

--- a/batman.html
+++ b/batman.html
@@ -3,38 +3,49 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/stylesBatman.css">
         <title>Batman CV</title> 
     </head> 
     <body> 
         <header> 
-            <img src = "img/Batman.png" alt="Logo Frontend"> 
-            <h1>curriculum vitae de bruce wayne</h1> 
+            <img class="batman" src = "img/batman/batman.png" alt="Logo Frontend"> 
+            <h1>curriculum &nbsp; vitae &nbsp; de &nbsp; bruce &nbsp; wayne</h1> 
         </header> 
         <main> 
             <section> 
                 <h2>datos personales</h2> 
                 <ul> 
-                    <li>nombre completo: bruce wayne</li> 
-                    <li>fecha nacimiento: 1/5/1939</li> 
-                    <li>lugar de nacimiento: Gotham city</li> 
+                    <li> <b> nombre completo: </b> bruce wayne</li> 
+                    <li> <b> fecha nacimiento: </b> 1/5/1939</li> 
+                    <li> <b>lugar de nacimiento: </b> Gotham city</li> 
                 </ul> 
             </section> 
             <section> 
-                <h2>formacion academica</h2> 
+                <h2>formación académica</h2> 
                 <dl> 
-                    <dt>1956-1961: Universidad del Espantapajaro</dt> 
-                    <dd>licencia en aeronautica</dd> 
-                    <dt>1952-1956: Secundaria Gotham</dt> 
-                    <dd>Bachiller con especializacion de trucos</dd> 
+                    <dt> <b> 1956-1961: </b> Universidad del Espantapajaro</dt> 
+                    <dd>Licenciatura en aeronáutica</dd> 
+                    <dt> <b> 1952-1956: </b> Secundaria Gotham</dt> 
+                    <dd>Bachiller con especialización de trucos</dd> 
                 </dl> 
             </section> 
             <section> 
                 <h2>experiencia laboral</h2> 
                 <dl> 
-                    <dt>1975-1985: desocupado</dt>
+                    <dt> <b> 1975-1985: </b> Desocupado</dt>
+                    <dd> Sin trabajo porque se rompió el batimovil </dd>
+                    <dt> <b> 1965-1975: </b> Cazavillanos y demás chusma</dt>
+                    <dd> Atrapé a Gatubela, a Joker. A Victor Fries lo dejé porque se me congeló la capa </dd>
+                    <dt> <b> 1962-1965: </b> Aprendiz de superhéroe</dt>
+                    <dd> Hice pasantía con Superman. Opté por usar máscara porque no puede aprender a peinarme el rulo </dd>
                 </dl>
             </section>
         </main>
+        <footer>
+            0810-batman - &nbsp;
+            <img class="icono" src="./img/batman/ico_linkedin.png" alt="linkedin"> &nbsp; - &nbsp;
+            <img class="icono" src="./img/batman/ico_instagram.png" alt="instagram">
+        </footer>
     </body>
 </html>
