se agrega vista de login con estilos

--- a/batman.html
+++ b/batman.html
@@ -9,7 +9,7 @@
     </head> 
     <body> 
         <header> 
-            <img class="batman" src = "img/batman/batman.png" alt="Logo Frontend"> 
+            <img class="batman" src = "./img/batman/batman.png" alt="Logo Frontend"> 
             <h1>curriculum &nbsp; vitae &nbsp; de &nbsp; bruce &nbsp; wayne</h1> 
         </header> 
         <main> 
