se agrega vista de harley y archivos de estilos

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h1> Login </h1>
-            <form action="./maquetacion.html" method="get">
+            <form action="./main.html" method="get">
                 <input class="user" type="text" name="user" placeholder="Usuario" required>
                 <input class="password" type="password" name="password" placeholder="Contraseña" required>
                 <input class="button" type="submit" value="Entrar">
