--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Formulario</title>
 </head>
+
 <body>
     <aside> 20% de descuento en todos los productos! </aside>
     <header>
         <img src="./img/icons/Group.svg" alt="tienda">
-        <div class="tienda"> Nombre de la tienda </div> 
+        <div class="tienda"> Nombre de la tienda </div>
     </header>
     <nav>
         <ul>
@@ -24,54 +26,75 @@
         <section>
             <article>
                 <div class="cabecera fondo-batman">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path></svg>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
+                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                            d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+                        </path>
+                    </svg>
                     <div class="foto foto-batman"></div>
                 </div>
                 <h3> BATMAN </h3>
-                <p> 
-                    Bruce Wayne es el único personaje que se identifica como Batman y aparece 
-                    en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. 
+                <p>
+                    Bruce Wayne es el único personaje que se identifica como Batman y aparece
+                    en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight.
                     Dick Grayson vuelve al manto de Nightwing
                 </p>
                 <div class="pie">
                     <div class="button">
-                        <a href="./batman.html"> Ver más </a> 
+                        <a href="./batman.html"> Ver más </a>
                     </div>
                 </div>
             </article>
 
             <article>
                 <div class="cabecera fondo-harley">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path></svg>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
+                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                            d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+                        </path>
+                    </svg>
                     <div class="foto foto-harley"></div>
                 </div>
                 <h3> HARLEY QUINN </h3>
-                <p> 
-                    La creación de Harley Quinn fue una idea de último minuto propuesta por el 
-                    escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo 
+                <p>
+                    La creación de Harley Quinn fue una idea de último minuto propuesta por el
+                    escritor estadounidense Paul Dini para modificar una escena del vigésimo-segundo
                     episodio de Batman: la serie animada.
                 </p>
                 <div class="pie">
                     <div class="button">
-                        <a href="./harley.html"> Ver más </a> 
+                        <a href="./harley.html"> Ver más </a>
                     </div>
                 </div>
             </article>
 
             <article>
                 <div class="cabecera fondo-superman">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path></svg>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
+                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                            d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+                        </path>
+                    </svg>
                     <div class="foto foto-superman"></div>
                 </div>
                 <h3> SUPERMAN </h3>
-                <p> 
-                    Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC Comics. ​
-                    El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster 
+                <p>
+                    Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC
+                    Comics. ​
+                    El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe
+                    Shuster
                     en 1933.
                 </p>
+
                 <div class="pie">
                     <div class="button">
-                        <a href="./superman.html"> Ver más </a> 
+                        <a href="./superman.html"> Ver más </a>
                     </div>
                 </div>
             </article>
@@ -81,4 +104,5 @@
         Todos los derechos reservados a FRONT END 1
     </footer>
 </body>
+
 </html>
