se crea vista de superman y estilos

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
             <form action="./main.html" method="get">
                 <input class="data" type="text" name="user" placeholder="Nombre y Apellido" required>
                 <input class="data" type="email" name="email" placeholder="Correo Electrónico" required>
-                <textarea class="message" name="message" id="message" rows="10"></textarea>
+                <textarea class="message" name="message" id="message" rows="10" placeholder="Tus comentarios" required></textarea>
                 <div class="buttons">
                     <input class="reset" type="reset" value="Resetear">
                     <input class="into" type="submit" value="Entrar">
