--- a/claseresponse.html
+++ b/claseresponse.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
-    <link rel="stylesheet" href="css/clase13.css">
+    <link rel="stylesheet" href="./css/clase13.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <h2>Lugares para visitar</h2>
             <div>
                 <div class="card">
-                    <img src="img/clase13/colombia.jpeg" alt="">
+                    <img src="./img/clase13/colombia.jpeg" alt="">
                     <h3>Colombia</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio totam fugiat sed consequatur
                         laboriosam, error veritatis cum deserunt numquam sint asperiores? Laborum doloribus aspernatur
@@ -34,7 +34,7 @@
                         voluptatibus architecto, a voluptatum beatae amet nesciunt veritatis facilis numquam.</p>
                 </div>
                 <div class="card">
-                    <img src="img/clase13/argentina.jpeg" alt="">
+                    <img src="./img/clase13/argentina.jpeg" alt="">
                     <h3>Argentina</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio totam fugiat sed consequatur
                         laboriosam, error veritatis cum deserunt numquam sint asperiores? Laborum doloribus aspernatur
@@ -42,7 +42,7 @@
                         voluptatibus architecto, a voluptatum beatae amet nesciunt veritatis facilis numquam.</p>
                 </div>
                 <div class="card">
-                    <img src="img/clase13/brasil.jpeg" alt="">
+                    <img src="./img/clase13/brasil.jpeg" alt="">
                     <h3>Brasil</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio totam fugiat sed consequatur
                         laboriosam, error veritatis cum deserunt numquam sint asperiores? Laborum doloribus aspernatur
